--- a/robot_code/main/Makefile
+++ b/robot_code/main/Makefile
@@ -23,7 +23,7 @@ MODULE_NAME := $(notdir $(CURDIR))
 
 include $(HOME_TREE)/mak_def.inc
 
-CXXSRC += main.cpp all_struct.cpp
+CXXSRC += main.cpp all_struct.cpp ../localization/localisation.cpp
 C_INCLUDES += -I$(CURDIR)/../sdk/include -I$(CURDIR)/../sdk/src   #-L./home/student/lidar_example_cpp-main/output/Linux/Release/
 
 EXTRA_OBJ :=
