--- a/robot_code/main/Makefile
+++ b/robot_code/main/Makefile
@@ -23,8 +23,8 @@ MODULE_NAME := $(notdir $(CURDIR))
 
 include $(HOME_TREE)/mak_def.inc
 
-CXXSRC += main.cpp all_struct.cpp 
-C_INCLUDES += -I$(CURDIR)/../sdk/include -I$(CURDIR)/../sdk/src   #-L./home/student/lidar_example_cpp-main/output/Linux/Release/
+CXXSRC += ../localization/localisation.cpp main.cpp all_struct.cpp 
+C_INCLUDES += -I$(CURDIR)/../sdk/include -I$(CURDIR)/../sdk/src  #-L./home/student/lidar_example_cpp-main/output/Linux/Release/
 
 EXTRA_OBJ :=
 LD_LIBS += -lstdc++ -lpthread -lm -pthread
